# mcp-pulse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: before-after.html
mcp_observe/: __init__.py  __main__.py  core.py  dashboard.py  models.py  storage.py
mcp_pulse/: __init__.py  __main__.py  core.py  dashboard.py  storage.py
tests/: test_core.py
